Compilateur/lex.output
Non-terminaux inutiles dans la grammaire

    elsif_statement


Terminaux inutilisés dans la grammaire

    tELSIF
    tERROR
    tNOT
    tNE
    tAND
    tOR


Règles inutiles dans la grammaire

   56 elsif_statement: ε
   57                | tELSIF tLBRACE statements tRBRACE


État 99 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: ε
    2        | program function_declaration

    3 function_declaration: tINT tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE
    4                     | tVOID tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE

    5 function_call: tID tLPAR parameter_call tRPAR

    6 parameter_decla: ε
    7                | tINT tID
    8                | parameter_decla tCOMMA tINT tID
    9                | tINT tMUL tID
   10                | parameter_decla tCOMMA tINT tMUL tID
   11                | tVOID

   12 parameter_call: expression
   13               | parameter_call tCOMMA expression

   14 statements: ε
   15           | statements statement

   16 statement: assign tSEMI
   17          | function_call tSEMI
   18          | declaration
   19          | if_statement
   20          | while_statement
   21          | print_statement
   22          | tRETURN expression tSEMI

   23 assign: tID tASSIGN expression
   24       | tMUL tID tASSIGN expression

   25 declaration: tINT decla tSEMI

   26 decla: decla tCOMMA decla
   27      | tID
   28      | tID tASSIGN expression
   29      | tMUL tID

   30 expression: expression tADD expression
   31           | expression tSUB expression
   32           | expression tMUL expression
   33           | expression tDIV expression
   34           | tLPAR expression tRPAR
   35           | function_call
   36           | atom

   37 atom: tID
   38     | tNB
   39     | tMUL tID
   40     | tADDRESS tID

   41 test: expression tEQ expression
   42     | expression tGE expression
   43     | expression tGT expression
   44     | expression tLE expression
   45     | expression tLT expression

   46 $@1: ε

   47 $@2: ε

   48 $@3: ε

   49 if_statement: tIF tLPAR test tRPAR $@1 tLBRACE $@2 statements tRBRACE $@3 else_statement

   50 else_statement: ε
   51               | tELSE tLBRACE statements tRBRACE

   52 @4: ε

   53 $@5: ε

   54 while_statement: tWHILE @4 tLPAR test tRPAR $@5 tLBRACE statements tRBRACE

   55 print_statement: tPRINT tLPAR expression tRPAR tSEMI


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tNB <nb> (258) 38
    tID <str> (259) 3 4 5 7 8 9 10 23 24 27 28 29 37 39 40
    tIF <nb> (260) 49
    tWHILE <nb> (261) 54
    tELSIF (262)
    tELSE (263) 51
    tPRINT (264) 55
    tRETURN (265) 22
    tINT (266) 3 7 8 9 10 25
    tVOID (267) 4 11
    tERROR (268)
    tADDRESS (269) 40
    tADD (270) 30
    tSUB (271) 31
    tMUL (272) 9 10 24 29 32 39
    tDIV (273) 33
    tLT (274) 45
    tGT (275) 43
    tNOT (276)
    tEQ (277) 41
    tNE (278)
    tGE (279) 42
    tLE (280) 44
    tASSIGN (281) 23 24 28
    tAND (282)
    tOR (283)
    tLBRACE (284) 3 4 49 51 54
    tRBRACE (285) 3 4 49 51 54
    tLPAR (286) 3 4 5 34 49 54 55
    tRPAR (287) 3 4 5 34 49 54 55
    tSEMI (288) 16 17 22 25 55
    tCOMMA (289) 8 10 13 26


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    program (36)
        à gauche: 1 2
        à droite: 0 2
    function_declaration (37)
        à gauche: 3 4
        à droite: 2
    function_call (38)
        à gauche: 5
        à droite: 17 35
    parameter_decla (39)
        à gauche: 6 7 8 9 10 11
        à droite: 3 4 8 10
    parameter_call (40)
        à gauche: 12 13
        à droite: 5 13
    statements (41)
        à gauche: 14 15
        à droite: 3 4 15 49 51 54
    statement (42)
        à gauche: 16 17 18 19 20 21 22
        à droite: 15
    assign (43)
        à gauche: 23 24
        à droite: 16
    declaration (44)
        à gauche: 25
        à droite: 18
    decla (45)
        à gauche: 26 27 28 29
        à droite: 25 26
    expression (46)
        à gauche: 30 31 32 33 34 35 36
        à droite: 12 13 22 23 24 28 30 31 32 33 34 41 42 43 44 45 55
    atom (47)
        à gauche: 37 38 39 40
        à droite: 36
    test (48)
        à gauche: 41 42 43 44 45
        à droite: 49 54
    if_statement (49)
        à gauche: 49
        à droite: 19
    $@1 (50)
        à gauche: 46
        à droite: 49
    $@2 (51)
        à gauche: 47
        à droite: 49
    $@3 (52)
        à gauche: 48
        à droite: 49
    else_statement (53)
        à gauche: 50 51
        à droite: 49
    while_statement (54)
        à gauche: 54
        à droite: 20
    @4 (55)
        à gauche: 52
        à droite: 54
    $@5 (56)
        à gauche: 53
        à droite: 54
    print_statement (57)
        à gauche: 55
        à droite: 21


État 0

    0 $accept: • program $end

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 1


État 1

    0 $accept: program • $end
    2 program: program • function_declaration

    $end   décalage et aller à l'état 2
    tINT   décalage et aller à l'état 3
    tVOID  décalage et aller à l'état 4

    function_declaration  aller à l'état 5


État 2

    0 $accept: program $end •

    $défaut  accepter


État 3

    3 function_declaration: tINT • tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE

    tID  décalage et aller à l'état 6


État 4

    4 function_declaration: tVOID • tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE

    tID  décalage et aller à l'état 7


État 5

    2 program: program function_declaration •

    $défaut  réduction par utilisation de la règle 2 (program)


État 6

    3 function_declaration: tINT tID • tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE

    tLPAR  décalage et aller à l'état 8


État 7

    4 function_declaration: tVOID tID • tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE

    tLPAR  décalage et aller à l'état 9


État 8

    3 function_declaration: tINT tID tLPAR • parameter_decla tRPAR tLBRACE statements tRBRACE

    tINT   décalage et aller à l'état 10
    tVOID  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (parameter_decla)

    parameter_decla  aller à l'état 12


État 9

    4 function_declaration: tVOID tID tLPAR • parameter_decla tRPAR tLBRACE statements tRBRACE

    tINT   décalage et aller à l'état 10
    tVOID  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (parameter_decla)

    parameter_decla  aller à l'état 13


État 10

    7 parameter_decla: tINT • tID
    9                | tINT • tMUL tID

    tID   décalage et aller à l'état 14
    tMUL  décalage et aller à l'état 15


État 11

   11 parameter_decla: tVOID •

    $défaut  réduction par utilisation de la règle 11 (parameter_decla)


État 12

    3 function_declaration: tINT tID tLPAR parameter_decla • tRPAR tLBRACE statements tRBRACE
    8 parameter_decla: parameter_decla • tCOMMA tINT tID
   10                | parameter_decla • tCOMMA tINT tMUL tID

    tRPAR   décalage et aller à l'état 16
    tCOMMA  décalage et aller à l'état 17


État 13

    4 function_declaration: tVOID tID tLPAR parameter_decla • tRPAR tLBRACE statements tRBRACE
    8 parameter_decla: parameter_decla • tCOMMA tINT tID
   10                | parameter_decla • tCOMMA tINT tMUL tID

    tRPAR   décalage et aller à l'état 18
    tCOMMA  décalage et aller à l'état 17


État 14

    7 parameter_decla: tINT tID •

    $défaut  réduction par utilisation de la règle 7 (parameter_decla)


État 15

    9 parameter_decla: tINT tMUL • tID

    tID  décalage et aller à l'état 19


État 16

    3 function_declaration: tINT tID tLPAR parameter_decla tRPAR • tLBRACE statements tRBRACE

    tLBRACE  décalage et aller à l'état 20


État 17

    8 parameter_decla: parameter_decla tCOMMA • tINT tID
   10                | parameter_decla tCOMMA • tINT tMUL tID

    tINT  décalage et aller à l'état 21


État 18

    4 function_declaration: tVOID tID tLPAR parameter_decla tRPAR • tLBRACE statements tRBRACE

    tLBRACE  décalage et aller à l'état 22


État 19

    9 parameter_decla: tINT tMUL tID •

    $défaut  réduction par utilisation de la règle 9 (parameter_decla)


État 20

    3 function_declaration: tINT tID tLPAR parameter_decla tRPAR tLBRACE • statements tRBRACE

    $défaut  réduction par utilisation de la règle 14 (statements)

    statements  aller à l'état 23


État 21

    8 parameter_decla: parameter_decla tCOMMA tINT • tID
   10                | parameter_decla tCOMMA tINT • tMUL tID

    tID   décalage et aller à l'état 24
    tMUL  décalage et aller à l'état 25


État 22

    4 function_declaration: tVOID tID tLPAR parameter_decla tRPAR tLBRACE • statements tRBRACE

    $défaut  réduction par utilisation de la règle 14 (statements)

    statements  aller à l'état 26


État 23

    3 function_declaration: tINT tID tLPAR parameter_decla tRPAR tLBRACE statements • tRBRACE
   15 statements: statements • statement

    tID      décalage et aller à l'état 27
    tIF      décalage et aller à l'état 28
    tWHILE   décalage et aller à l'état 29
    tPRINT   décalage et aller à l'état 30
    tRETURN  décalage et aller à l'état 31
    tINT     décalage et aller à l'état 32
    tMUL     décalage et aller à l'état 33
    tRBRACE  décalage et aller à l'état 34

    function_call    aller à l'état 35
    statement        aller à l'état 36
    assign           aller à l'état 37
    declaration      aller à l'état 38
    if_statement     aller à l'état 39
    while_statement  aller à l'état 40
    print_statement  aller à l'état 41


État 24

    8 parameter_decla: parameter_decla tCOMMA tINT tID •

    $défaut  réduction par utilisation de la règle 8 (parameter_decla)


État 25

   10 parameter_decla: parameter_decla tCOMMA tINT tMUL • tID

    tID  décalage et aller à l'état 42


État 26

    4 function_declaration: tVOID tID tLPAR parameter_decla tRPAR tLBRACE statements • tRBRACE
   15 statements: statements • statement

    tID      décalage et aller à l'état 27
    tIF      décalage et aller à l'état 28
    tWHILE   décalage et aller à l'état 29
    tPRINT   décalage et aller à l'état 30
    tRETURN  décalage et aller à l'état 31
    tINT     décalage et aller à l'état 32
    tMUL     décalage et aller à l'état 33
    tRBRACE  décalage et aller à l'état 43

    function_call    aller à l'état 35
    statement        aller à l'état 36
    assign           aller à l'état 37
    declaration      aller à l'état 38
    if_statement     aller à l'état 39
    while_statement  aller à l'état 40
    print_statement  aller à l'état 41


État 27

    5 function_call: tID • tLPAR parameter_call tRPAR
   23 assign: tID • tASSIGN expression

    tASSIGN  décalage et aller à l'état 44
    tLPAR    décalage et aller à l'état 45


État 28

   49 if_statement: tIF • tLPAR test tRPAR $@1 tLBRACE $@2 statements tRBRACE $@3 else_statement

    tLPAR  décalage et aller à l'état 46


État 29

   54 while_statement: tWHILE • @4 tLPAR test tRPAR $@5 tLBRACE statements tRBRACE

    $défaut  réduction par utilisation de la règle 52 (@4)

    @4  aller à l'état 47


État 30

   55 print_statement: tPRINT • tLPAR expression tRPAR tSEMI

    tLPAR  décalage et aller à l'état 48


État 31

   22 statement: tRETURN • expression tSEMI

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 55
    atom           aller à l'état 56


État 32

   25 declaration: tINT • decla tSEMI

    tID   décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58

    decla  aller à l'état 59


État 33

   24 assign: tMUL • tID tASSIGN expression

    tID  décalage et aller à l'état 60


État 34

    3 function_declaration: tINT tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE •

    $défaut  réduction par utilisation de la règle 3 (function_declaration)


État 35

   17 statement: function_call • tSEMI

    tSEMI  décalage et aller à l'état 61


État 36

   15 statements: statements statement •

    $défaut  réduction par utilisation de la règle 15 (statements)


État 37

   16 statement: assign • tSEMI

    tSEMI  décalage et aller à l'état 62


État 38

   18 statement: declaration •

    $défaut  réduction par utilisation de la règle 18 (statement)


État 39

   19 statement: if_statement •

    $défaut  réduction par utilisation de la règle 19 (statement)


État 40

   20 statement: while_statement •

    $défaut  réduction par utilisation de la règle 20 (statement)


État 41

   21 statement: print_statement •

    $défaut  réduction par utilisation de la règle 21 (statement)


État 42

   10 parameter_decla: parameter_decla tCOMMA tINT tMUL tID •

    $défaut  réduction par utilisation de la règle 10 (parameter_decla)


État 43

    4 function_declaration: tVOID tID tLPAR parameter_decla tRPAR tLBRACE statements tRBRACE •

    $défaut  réduction par utilisation de la règle 4 (function_declaration)


État 44

   23 assign: tID tASSIGN • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 63
    atom           aller à l'état 56


État 45

    5 function_call: tID tLPAR • parameter_call tRPAR

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call   aller à l'état 54
    parameter_call  aller à l'état 64
    expression      aller à l'état 65
    atom            aller à l'état 56


État 46

   49 if_statement: tIF tLPAR • test tRPAR $@1 tLBRACE $@2 statements tRBRACE $@3 else_statement

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 66
    atom           aller à l'état 56
    test           aller à l'état 67


État 47

   54 while_statement: tWHILE @4 • tLPAR test tRPAR $@5 tLBRACE statements tRBRACE

    tLPAR  décalage et aller à l'état 68


État 48

   55 print_statement: tPRINT tLPAR • expression tRPAR tSEMI

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 69
    atom           aller à l'état 56


État 49

   38 atom: tNB •

    $défaut  réduction par utilisation de la règle 38 (atom)


État 50

    5 function_call: tID • tLPAR parameter_call tRPAR
   37 atom: tID •

    tLPAR  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 37 (atom)


État 51

   40 atom: tADDRESS • tID

    tID  décalage et aller à l'état 70


État 52

   39 atom: tMUL • tID

    tID  décalage et aller à l'état 71


État 53

   34 expression: tLPAR • expression tRPAR

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 72
    atom           aller à l'état 56


État 54

   35 expression: function_call •

    $défaut  réduction par utilisation de la règle 35 (expression)


État 55

   22 statement: tRETURN expression • tSEMI
   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression

    tADD   décalage et aller à l'état 73
    tSUB   décalage et aller à l'état 74
    tMUL   décalage et aller à l'état 75
    tDIV   décalage et aller à l'état 76
    tSEMI  décalage et aller à l'état 77


État 56

   36 expression: atom •

    $défaut  réduction par utilisation de la règle 36 (expression)


État 57

   27 decla: tID •
   28      | tID • tASSIGN expression

    tASSIGN  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 27 (decla)


État 58

   29 decla: tMUL • tID

    tID  décalage et aller à l'état 79


État 59

   25 declaration: tINT decla • tSEMI
   26 decla: decla • tCOMMA decla

    tSEMI   décalage et aller à l'état 80
    tCOMMA  décalage et aller à l'état 81


État 60

   24 assign: tMUL tID • tASSIGN expression

    tASSIGN  décalage et aller à l'état 82


État 61

   17 statement: function_call tSEMI •

    $défaut  réduction par utilisation de la règle 17 (statement)


État 62

   16 statement: assign tSEMI •

    $défaut  réduction par utilisation de la règle 16 (statement)


État 63

   23 assign: tID tASSIGN expression •
   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression

    tADD  décalage et aller à l'état 73
    tSUB  décalage et aller à l'état 74
    tMUL  décalage et aller à l'état 75
    tDIV  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 23 (assign)


État 64

    5 function_call: tID tLPAR parameter_call • tRPAR
   13 parameter_call: parameter_call • tCOMMA expression

    tRPAR   décalage et aller à l'état 83
    tCOMMA  décalage et aller à l'état 84


État 65

   12 parameter_call: expression •
   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression

    tADD  décalage et aller à l'état 73
    tSUB  décalage et aller à l'état 74
    tMUL  décalage et aller à l'état 75
    tDIV  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 12 (parameter_call)


État 66

   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression
   41 test: expression • tEQ expression
   42     | expression • tGE expression
   43     | expression • tGT expression
   44     | expression • tLE expression
   45     | expression • tLT expression

    tADD  décalage et aller à l'état 73
    tSUB  décalage et aller à l'état 74
    tMUL  décalage et aller à l'état 75
    tDIV  décalage et aller à l'état 76
    tLT   décalage et aller à l'état 85
    tGT   décalage et aller à l'état 86
    tEQ   décalage et aller à l'état 87
    tGE   décalage et aller à l'état 88
    tLE   décalage et aller à l'état 89


État 67

   49 if_statement: tIF tLPAR test • tRPAR $@1 tLBRACE $@2 statements tRBRACE $@3 else_statement

    tRPAR  décalage et aller à l'état 90


État 68

   54 while_statement: tWHILE @4 tLPAR • test tRPAR $@5 tLBRACE statements tRBRACE

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 66
    atom           aller à l'état 56
    test           aller à l'état 91


État 69

   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression
   55 print_statement: tPRINT tLPAR expression • tRPAR tSEMI

    tADD   décalage et aller à l'état 73
    tSUB   décalage et aller à l'état 74
    tMUL   décalage et aller à l'état 75
    tDIV   décalage et aller à l'état 76
    tRPAR  décalage et aller à l'état 92


État 70

   40 atom: tADDRESS tID •

    $défaut  réduction par utilisation de la règle 40 (atom)


État 71

   39 atom: tMUL tID •

    $défaut  réduction par utilisation de la règle 39 (atom)


État 72

   30 expression: expression • tADD expression
   31           | expression • tSUB expression
   32           | expression • tMUL expression
   33           | expression • tDIV expression
   34           | tLPAR expression • tRPAR

    tADD   décalage et aller à l'état 73
    tSUB   décalage et aller à l'état 74
    tMUL   décalage et aller à l'état 75
    tDIV   décalage et aller à l'état 76
    tRPAR  décalage et aller à l'état 93


État 73

   30 expression: expression tADD • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 94
    atom           aller à l'état 56


État 74

   31 expression: expression tSUB • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 95
    atom           aller à l'état 56


État 75

   32 expression: expression tMUL • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 96
    atom           aller à l'état 56


État 76

   33 expression: expression tDIV • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 97
    atom           aller à l'état 56


État 77

   22 statement: tRETURN expression tSEMI •

    $défaut  réduction par utilisation de la règle 22 (statement)


État 78

   28 decla: tID tASSIGN • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 98
    atom           aller à l'état 56


État 79

   29 decla: tMUL tID •

    $défaut  réduction par utilisation de la règle 29 (decla)


État 80

   25 declaration: tINT decla tSEMI •

    $défaut  réduction par utilisation de la règle 25 (declaration)


État 81

   26 decla: decla tCOMMA • decla

    tID   décalage et aller à l'état 57
    tMUL  décalage et aller à l'état 58

    decla  aller à l'état 99


État 82

   24 assign: tMUL tID tASSIGN • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 100
    atom           aller à l'état 56


État 83

    5 function_call: tID tLPAR parameter_call tRPAR •

    $défaut  réduction par utilisation de la règle 5 (function_call)


État 84

   13 parameter_call: parameter_call tCOMMA • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 101
    atom           aller à l'état 56


État 85

   45 test: expression tLT • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 102
    atom           aller à l'état 56


État 86

   43 test: expression tGT • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 103
    atom           aller à l'état 56


État 87

   41 test: expression tEQ • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 104
    atom           aller à l'état 56


État 88

   42 test: expression tGE • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 105
    atom           aller à l'état 56


État 89

   44 test: expression tLE • expression

    tNB       décalage et aller à l'état 49
    tID       décalage et aller à l'état 50
    tADDRESS  décalage et aller à l'état 51
    tMUL      décalage et aller à l'état 52
    tLPAR     décalage et aller à l'état 53

    function_call  aller à l'état 54
    expression     aller à l'état 106
    atom           aller à l'état 56


État 90

   49 if_statement: tIF tLPAR test tRPAR • $@1 tLBRACE $@2 statements tRBRACE $@3 else_statement

    $défaut  réduction par utilisation de la règle 46 ($@1)

    $@1  aller à l'état 107


État 91

   54 while_statement: tWHILE @4 tLPAR test • tRPAR $@5 tLBRACE statements tRBRACE

    tRPAR  décalage et aller à l'état 108


État 92

   55 print_statement: tPRINT tLPAR expression tRPAR • tSEMI

    tSEMI  décalage et aller à l'état 109


État 93

   34 expression: tLPAR expression tRPAR •

    $défaut  réduction par utilisation de la règle 34 (expression)


État 94
